--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,7 +23,6 @@
     "@fortawesome/angular-fontawesome": "^0.13.0",
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
-    "@typescript-eslint/parser": "^5.59.11",
     "bootstrap": "^5.3.0",
     "ngx-pagination": "^6.0.3",
     "ngx-toastr": "^17.0.2",
@@ -37,6 +36,9 @@
     "@angular/compiler-cli": "^16.0.0",
     "@schematics/angular": "^16.0.5",
     "@types/jasmine": "~4.3.0",
+    "@typescript-eslint/eslint-plugin": "^5.59.11",
+    "@typescript-eslint/parser": "^5.59.11",
+    "eslint": "^8.43.0",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
