add settings.json to gitignore

--- a/frontend/.vscode/settings.json
+++ b/frontend/.vscode/settings.json
@@ -4,5 +4,10 @@
     "kohhxxx",
     "toastr",
     "Toastr"
-  ]
+  ],
+  "angular-schematics.schematicsDefaultOptions": {
+    "angular-*": {
+      "externalTemplate": true
+    }
+  }
 }
